# personal-self

./: combined_podman_update_slack.sh  popcosmicbeta.sh  weekly_scripts_wrapper.sh
mcp-bitwarden/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-run.sh  docker-compose.yml  n8n-integration.example
mcp-bitwarden/src/: main.rs
plex/: .env.example  .env.template  SETUP.md  docker-compose.yml  plex-stack.sh
