[package]
name = "mcp-bitwarden"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
bitwarden = { version = "0.3.1", features = ["secrets"] }
openssl = { version = "0.10", features = ["vendored"] }
