[package]
name = "bitwarden-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bitwarden = { version = "*", features = ["secrets"] }  # SDK crate
uuid = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.23", features = ["json"] }
